# duckdb-prefect

./: outfile.parquet  pyproject.toml
examples/: demo.py  poke_demo.py
