[project]
name = "duckdb-prefect"
dynamic = ["version"]
description = "Demo of using DuckDB with Prefect"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["olap", "analytics", "duckdb", "prefect"]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.2.9",
    "faker",
    "fastparquet",
    "gcsfs>=2023.9.2",
    "pandas",
    "prefect>=2.13.4",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.4.0"]
dev = [
    "black",
    "ipython",
    "pre-commit>=2.21,<4.0",
    "ruff",
]

[project.urls]
Code = "https://github.com/zzstoatzz/duckdb-prefect"
Documentation = "https://github.com/zzstoatzz/duckdb-prefect"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# black configuration
[tool.black]
preview = true

# ruff configuration
[tool.ruff]
extend-select = ["I"]